--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/rineliniguezsosa/token-authentication/issues"
   },
-  "homepage": "https://github.com/rineliniguezsosa/token-authentication#readme"
+  "homepage": "https://github.com/rineliniguezsosa/token-authentication#readme",
+  "devDependencies": {
+    "express": "^4.21.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.3"
+  }
 }
