--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "token-authentication with nodejs and reactjs",
   "main": "index.js",
   "scripts": {
+    "dev":"ts-node-dev --respawn --transpile-only src/server.ts",
+    "build":"tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
