--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "mongoose": "^8.7.1"
