--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "express": "^4.21.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
